r296 (23. 01. 2025):
Assault Tracker: Disabled hostage delay in Control state will be reflected in the tracker with a yellow color
Poco Health Float Style: Added "Show Background Blur" option

r295 (18. 01. 2025):
Reservoir Dogs Day 2: Fixed a crash with waypoints

r294 (17. 01. 2025):
Fixed for real a crash after throwing a bag and "Show Bag Outline color based on their weight" is enabled

r293 (16. 01. 2025):
Buffs: Fixed a possible crash after converting an enemy
Possible fix for a crash after throwing a bag and "Show Bag Outline color based on their weight" is enabled

r292 (15. 01. 2025):
Captain Chance Tracker: Fixed inconsistent tracking if the tracker is created mid-heist and not after alarm
Mission Briefing: Added escape chance after completing heists in loud
Adjusted Zipline trackers to match their waypoint counterpart
Fixed sync info for Captain Chance Tracker send out twice in Crime Spree

r291 (12. 01. 2025):
Attempt to fix random crashes after going to the main menu

r290 (11. 01. 2025):
Reduced used memory by using the same tracker for deployables
Mission Briefing: Added stealth bonus after completing heists in stealth

r289 (09. 01. 2025):
Fixed a crash when Gage Boosts are enabled in Crime Spree
Reduced achievement visual clutter after alarm
Buffs: Possible fix for a crash after spawn

r288 (08. 01. 2025):
Fixed a crash after alarm when Marshal spawn group is not defined

r287 (07. 01. 2025):
Escape: Overpass: Fixed overlapping waypoints for Van and Escape
Mission Briefing: Fixed negative bags to secure in endless heists
Added how much health you regenerate in Health Regen buff
Added Tag Team - Absorption buff
Added options "Show Current Real Time In-game" and "Show Marshal Initial Spawn Tracker"
Fixed an issue where XP Panel in Mission Briefing is still visible if you are kicked in briefing
Fixed an issue where disabled Gage Packages tracker does not show correct XP in Mission Briefing