@@ -1,3 +1,6 @@
+r297 (26. 01. 2025):
+Four Stores: Attempt to fix a crash after opening safes with Restoration Mod Overhaul installed
+
 r296 (23. 01. 2025):
 Assault Tracker: Disabled hostage delay in Control state will be reflected in the tracker with a yellow color
 Poco Health Float Style: Added "Show Background Blur" option
